# basic-c-to-rust-transpiler

./: Cargo.toml  README.md
src/: c_grammar.pest  main.rs
